# webinar-security-by-design

./: .spectral.yaml  Dockerfile  README.md  alembic.ini  crapi.yaml  docker-compose.yaml  launchReadyAPISecurityRunner.sh  launchReadyAPITestRunner.sh  owasp.spectral.yaml  package-lock.json  package.json  pyproject.toml  wait-for
.github/workflows/: API-Provider-CI.yaml
ReadyAPI-Tests/: secure-by-design-readyapi-project.xml
apis/: crapi.yaml  ecommerce.yaml  payees-openapi.yaml
migrations/: env.py
migrations/versions/: 2665a8e53b38_create_models.py  366eed8c16ae_update_id_type.py  6ab213a2beec_create_models.py  ec77d1b4b0de_create_models.py
src/: api.py  brute_force_password.py  fixtures.py  models.py  schemas.py
